# virtual-waiting-room-on-aws

./: .eslintrc.js  .gitignore  .trufflehog-exclude  .viperlightignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE.txt  README.md  buildspec.yml  sonar-project.properties
.github/actions/hawkeye-scan/: Dockerfile  action.yml  actionentry.sh
.github/workflows/: codeql.yml  notify-workflow.yml  post-pipeline-workflow.yml  pull-request-workflow.yml  push-workflow.yml  release-branch-test-deploy.yml  release-workflow.yml  test-workflow.yml  trufflehog.yml  viperlight.yml
deployment/: Dockerfile  aws-virtual-waiting-room-api-gateway-cw-logs-role.json  aws-virtual-waiting-room-authorizers.json  aws-virtual-waiting-room-getting-started.json  aws-virtual-waiting-room-openid.json  aws-virtual-waiting-room-sample-inlet-strategy.json  aws-virtual-waiting-room-swagger-private-api.json  aws-virtual-waiting-room-swagger-public-api.json  aws-virtual-waiting-room.json  build-open-source-dist.sh  build-s3-dist.sh  deploy.sh  docker_build.sh  end-workflow-notification.py  pyproject.toml  req-vwr-cleanroom.txt  requirements.txt  run-unit-tests.sh  virtual-waiting-room-on-aws-api-gateway-cw-logs-role.json  virtual-waiting-room-on-aws-authorizers.json  virtual-waiting-room-on-aws-getting-started.json  virtual-waiting-room-on-aws-openid.json  virtual-waiting-room-on-aws-sample-inlet-strategy.json  virtual-waiting-room-on-aws-sample.json  virtual-waiting-room-on-aws-swagger-private-api.json  virtual-waiting-room-on-aws-swagger-public-api.json  virtual-waiting-room-on-aws.json
docs/: behavioral-views.drawio  deployment-view.drawio  developer-guide.md  install-guide.md  logical-view.drawio  physical-view.drawio  sequence-diagrams.drawio  software-architecture.md  use-cases.drawio
source/control-panel/: README.md  babel.config.js  package-lock.json  package.json  vue.config.js
source/control-panel/mocks/: cors.js  data.json  routes.json
source/control-panel/src/: .eslintrc.json  .jshintrc  App.vue  main.js
source/core-api-authorizers-sample/: .gitignore
source/core-api/custom_resources/: custom_resource_tests.py  generate_keys.py  initialize_state.py  intersect_az.py  pyproject.toml  requirements.txt  update_distribution.py
source/core-api/lambda_functions/: counters.py  (+25 more)
source/loadtest/: README.md  app.py  loadtest.json  requirements.txt  security_group_stackset.json  stackset_execution_roles.json
source/openid-waitingroom/: .gitignore
source/openid-waitingroom/chalice/: app.py  merge_template.json  openid_waitingroom_tests.py  pyproject.toml  requirements.txt
source/openid-waitingroom/chalice/.chalice/: config.json
source/openid-waitingroom/custom_resources/: custom_resources_test.py  custom_resources_tests.py  generate_client_secret.py  generate_redirect_uris_secret.py  pyproject.toml  requirements.txt
source/sample-inlet-strategies/: inlet_strategy_tests.py  max_size_inlet.py  periodic_inlet.py  pyproject.toml  requirements.txt
source/sample-waiting-room-site/: README.md  babel.config.js  package-lock.json  package.json  vue.config.js
source/shared/: custom_resources_shared_test.py  shared_resources_tests.py  shared_test.py
source/token-authorizer/: .gitignore
source/token-authorizer/chalice/: app.py  merge_template.json  pyproject.toml  requirements.txt  token_authorizer_tests.py
source/token-authorizer/chalice/.chalice/: config.json
source/tools/: botocore-sigv4.py  generate_jwt.py  generate_keys_jose.py  generate_keys_jwcrypto.py  generate_lambda_alarms.py  load-test-prepare.py  load_test_prepare.py  pylint.sh  regional_buckets.py  retrieve_jwcrypto_binaries.sh  union_az.py
source/webserver-container/: Dockerfile  docker_build.sh  index.html
(+77 files in other folders)
