[tool.poetry]
name = "deployment"
version = "1.1.11"
description = "Deployment of Virtual Waiting Room on AWS"
authors = ["Amazon Web Services"]
package-mode=false

[tool.poetry.dependencies]
python = ">=3.10, <4"
crhelper = "2.0.11"
requests = "2.32.3"
aws-requests-auth = "0.4.3"
urllib3 = "2.2.3"
awscli = "1.35.13"
boto3 = "1.35.47"
botocore = "1.35.47"
build = "1.2.2"
cfn-lint = "1.18.1"
chalice = "1.31.2"
coverage = "7.6.4"
jwcrypto = "1.5.6"
python-dateutil = "2.9.0"
redis = "5.1.1"
testresources = "2.0.1"
virtual_waiting_room_on_aws_common = {path = "../source/shared/virtual-waiting-room-on-aws-common"} 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
