[tool.poetry]
name = "custom-resources"
version = "1.1.15"
description = "Open Id waiting room template of Virtual Waiting Room on AWS"
authors = ["Amazon Web Services"]
package-mode = false

[tool.poetry.dependencies]
python = ">3.9"
requests = "2.32.4"
aws-requests-auth = "0.4.3"
urllib3 = "2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
