[tool.poetry]
name = "custom-resources"
version = "1.1.15"
description = "Custom resources for open Id waiting room of Virtual Waiting Room on AWS"
authors = ["Amazon Web Services"]

[tool.poetry.dependencies]
python = ">3.9"
crhelper = "2.0.11"
requests = "2.32.4"
urllib3 = "2.5.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
