[tool.poetry]
name = "custom-resources"
version = "1.1.15"
description = "Token Authorizer for template of Virtual Waiting Room on AWS"
authors = ["Amazon Web Services"]

[tool.poetry.dependencies]
python = ">3.9"
requests="2.32.4"
urllib3 = "2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
